--- a/publication/markdown/summary.Rmd
+++ b/publication/markdown/summary.Rmd
@@ -96,7 +96,7 @@ Support</Div>
 <Div custom-style = "RestrictedStats">RESTRICTED STATISTICS: embargoed to 09:30 `r format(pub_date, "%d/%m/%Y")`</Div>
 
 ### About this release
-This release by Public Health Scotland (PHS) reports on the Scottish Government’s Local Delivery Plan (LDP) standard that all those newly diagnosed with dementia should receive a minimum of one year’s post-diagnostic support. The LDP standard is reported in two parts. The percentage of people estimated to be newly diagnosed with dementia who were referred for postdiagnostic support and, of those referred, the percentage who received a minimum of one year’s support. This report presents finalised figures for `r glue_collapse(setdiff(fy_in_pub, latest_fy), sep = ", ", last = " and ")` and provisional figures for `r latest_fy` which are subject to some service users completing their support.
+This release by Public Health Scotland (PHS) reports on the Scottish Government’s Local Delivery Plan (LDP) standard that all those newly diagnosed with dementia should receive a minimum of one year’s post-diagnostic support. The LDP standard is reported in two parts. The percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support and, of those referred, the percentage who received a minimum of one year’s support. This report presents finalised figures for `r glue_collapse(setdiff(fy_in_pub, latest_fy), sep = ", ", last = " and ")` and provisional figures for `r latest_fy` which are subject to some service users completing their support.
 
 ### Main Points
 
@@ -123,22 +123,22 @@ external_img(
 
 <Div custom-style = "Footnotes">
 1. Figures for `r latest_fy` are provisional (^P^) subject to all service users completing their support.
-2. 2018/19 figures for NHS Grampian are affected by a change in PDS service provided by Aberdeen City. See Appendix 1 of the main report for further information.
+2. Figures for NHS Grampian are affected by a change in service provision of PDS within Aberdeen City during 2019. See background for further information.
 </div>
 
 * In Scotland, `r summary %>% filter(fy == latest_fy) %>% pull(inc_perc)` of those people estimated to be newly diagnosed with dementia in `r latest_fy` were referred for post-diagnostic support, compared to `r summary %>% filter(fy == revised_fy) %>% pull(inc_perc)` in `r revised_fy`.
 
 ### Background
 
-The Scottish Government published their [third national dementia strategy](https://beta.gov.scot/publications/scotlands-national-dementia-strategy-2017-2020/) in 2017. This included the commitment to extend and embed dementia post-diagnostic support. In order to effectively monitor the delivery of post-diagnostic support a national [local delivery plan (LDP) standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) was introduced for all those newly diagnosed with dementia to receive a minimum of one year’s post-diagnostic support.
+The Scottish Government published their [third national dementia strategy](https://beta.gov.scot/publications/scotlands-national-dementia-strategy-2017-2020/) in 2017. This included the commitment to extend and embed dementia post-diagnostic support (PDS). In order to effectively monitor the delivery of PDS a national [local delivery plan (LDP) standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) was introduced for all those newly diagnosed with dementia to receive a minimum of one year’s PDS.
 
-NHS Boards provide quarterly data submissions to Public Health Scotland on individuals diagnosed with dementia and referred for post-diagnostic support within their local areas and this dataset forms the basis of the LDP standard calculation.
+NHS Boards provide quarterly data submissions to PHS, in line with data definitions effective 1 April 2019 on individuals diagnosed with dementia and referred for post-diagnostic support within their local areas. This dataset forms the basis of the LDP standard calculation. For this report, the Scotland level error rate `r glue_collapse(err$text, sep = ", ", last = " and ")`.
 
-Revised [data definitions](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf) and reporting processes were effective from 1 April 2019 and designed in consultation with stakeholders to improve the quality and consistency of the data reported. As a result, information presented in this publication is not comparable to information published prior to March 2020. For this report, the Scotland level error rate `r glue_collapse(err$text, sep = ", ", last = " and ")`.
+Aberdeen City Health & Social Care Partnership ceased its contract with Alzheimer Scotland during 2019 and introduced an in house dementia PDS service. This transition resulted in some PDS cases being terminated by Alzheimer Scotland earlier than 12 months and therefore not meeting the LDP standard.  As part of the transition, individuals were contacted to ask if they still wanted to receive PDS which was then provided by the in house service, if required. This should be taken into account when interpreting figures for 2018/19.
 
-As a result of the COVID-19 pandemic, some areas have reported difficulties in updating their data systems which are required to provide the dementia PDS dataset.
+Information presented in this publication is not comparable to information published for time periods prior to 2016/17. 
 
-Part of the LDP standard calculation requires the number of referrals for post-diagnostic support to be compared against an estimated number of newly diagnosed dementia cases each year. Health Board level estimates of people newly diagnosed with dementia (incidence) used for this calculation are from the paper [‘Estimated and Projected Diagnosis Rates for Dementia in Scotland 2014-2020’](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) published by the Scottish Government in 2016.
+Part of the LDP standard calculation requires the number of referrals for PDS to be compared against an estimated number of newly diagnosed dementia cases each year. Health Board level estimates of people newly diagnosed with dementia (incidence) used for this calculation are from the paper [‘Estimated and Projected Diagnosis Rates for Dementia in Scotland 2014-2020’](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) published by the Scottish Government in 2016.
 
 ### Contact
 
