--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -551,132 +551,6 @@ simd_footnote <- glue(
 
 ```
 
-```{r metadata, echo = FALSE, message = FALSE, warning = FALSE, error = FALSE}
-metadata <- tribble(
-  ~indicator, ~description,
-  "Publication title",
-  glue("Dementia Post-Diagnostic Support: Local Delivery Plan (LDP) standard ",
-       "- Figures to {latest_fy}"),
-  "Description",
-  glue("This publication reports on the [LDP standard](https://www.gov.scot/",
-       "About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) ",
-       "that those people newly diagnosed with dementia should receive a ",
-       "minimum of one year's post-diagnostic support."),
-  "Theme",
-  "Health and Social Care",
-  "Topic",
-  "Dementia Post-Diagnostic Support",
-  "Format",
-  "PDF Report with Excel Tables",
-  "Data source(s)",
-  glue("Public Health Scotland (PHS) Dementia Post-diagnostic support ",
-       "data submission from NHS Boards"),
-  "Date that data are acquired",
-  glue("Data submission as at {format(end_date, '%d %B %Y')}"),
-  "Release date",
-  format(pub_date, "%d %B %Y"),
-  "Frequency",
-  "Annual",
-  "Timeframe of data and timeliness",
-  glue("This publication includes those diagnosed with dementia and referred ",
-  "for dementia post-diagnostic support between 1 April ",
-  "{str_sub(fy_in_pub[1], 1, 4)} to 31 March 20{str_sub(latest_fy, 6, 7)}. \n",
-  "For diagnoses in {latest_fy}, it is possible some service users are ",
-  "still receiving their post-diagnostic support and they are reported as ",
-  "ongoing."),
-  "Continuity of data",
-  glue("Initial data collection for Dementia post-diagnostic support began ",
-  "in April 2013, however due to data completeness and quality issues the ",
-  "definitions and recording processes were revised during 2018/19 and were ",
-  "effective from 1 April 2019 for all records with a dementia diagnosis ",
-  "post 1 April 2016. \n Information presented in this publication is not ",
-  "comparable to dementia post-diagnostic support LDP standard information ",
-  "published for time periods prior to 2016/17.  This is due to a combination of the ",
-  "change in definitions, improvements to data quality and refinements to ",
-  "the method used to calculate the standard."),
-  "Revisions statement",
-  glue("Public Health Scotland (PHS) aims to continually improve the ",
-       "interpretation of the data and therefore analysis methods are ",
-       "regularly reviewed and may be updated in the future."),
-  "Revisions relevant to this publication",
-  glue("This publication presents finalised figures for {revised_fy} and ",
-       "provisional figures for {latest_fy} subject to some service users ",
-       "still receiving post-diagnostic support."),
-  "Concepts and definitions",
-  glue("The Data Definitions and Recording Guidance effective 01 April 2019 ",
-  "can be found on the [PHS website](https://www.isdscotland.org/Health-",
-  "Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-",
-  "Definitions-and-Recording-Guidance.pdf)."),
-  "Relevance and key uses of the statistics",
-  glue("The data presented in this release supports the Scottish Government’s ",
-       "LDP standard relating to those people newly diagnosed with dementia ",
-       "should receive a minimum of one year’s post-diagnostic support."),
-  "Accuracy",
-  glue("This is an Official Statistics publication and the UK Statistics ",
-       "Authority’s Code of Practice has been followed throughout. \n",
-       "NHS Boards have the responsibility of gathering and submitting ",
-       "information on the delivery of Dementia post-diagnostic support for ",
-       "all Integration Joint Boards to support the measurement of the LDP ",
-       "standard. It is expected by PHS that quality assurance methods and ",
-       "measures are in place locally and implemented to ensure information ",
-       "is accurate and correct. PHS conduct quality checks upon receipt of ",
-       "data and feedback data queries to NHS Boards. \nAs at the ",
-       "{format(end_date, '%d %B %Y')} data submission, the Scotland level ",
-       "error rate {glue_collapse(err$text, sep = ', ', last = ' and ')}. \n",
-       a_city_statement),
-  "Completeness",
-  glue("Data submissions are received for all NHS Boards and include data ",
-       "for all Integration Joint Boards. \n As a result of the COVID-19 ",
-       "pandemic, some areas have reported difficulties in updating their ",
-       "data systems which are required to provide the dementia PDS dataset, ",
-       "however it is not anticipated that this has a large impact on the ",
-       "data presented in this report."),
-  "Comparability",
-  glue("Information presented in this publication is not ",
-       "comparable to dementia post-diagnostic support LDP standard ",
-       "information published for time periods prior to 2016/17. This is due ",
-       "to a combination of the change in definitions, improvements to data ",
-       "quality and refinements to the method used to calculate the standard. ",
-       "\n ",
-       "Comparability between NHS Boards / Integration Joint Boards should be ",
-       "done so with caution as services can provide different models of ",
-       "care and have varying resource issues."),
-  "Accessibility",
-  glue("It is the policy of Public Health Scotland (PHS) to make its web ",
-       "sites and products accessible according to [published guidelines]",
-       "(https://beta.isdscotland.org/front-matter/accessibility-statement/). ",
-       "Accessibility of the report and findings are of continuous ",
-       "consideration throughout the report development and all figures ",
-       "have been assessed against the PHS accessibility guidelines."),
-  "Coherence and clarity",
-  glue("The summary and publication report are accessible via the [PHS website",
-       "](https://beta.isdscotland.org/find-publications-and-data/conditions-",
-       "and-diseases/dementia/dementia-post-diagnostic-support/). Tables and ",
-       "charts are presented within an Excel workbook with drop down boxes."),
-  "Value type and unit of measurement",
-  "Numbers, percentages",
-  "Disclosure",
-  glue("The [PHS protocol on Statistical Disclosure](https://beta.isdscotland.",
-       "org/media/4191/public-health-scotland-statistical-disclosure-control-",
-       "protocol.pdf) is followed."),
-  "Official Statistics designation",
-  "Official Statistics",
-  "UK Statistics Authority Assessment",
-  "N/A",
-  "Last published",
-  format(last_pub_date, "%d %B %Y"),
-  "Next published",
-  glue("March {year(pub_date) + 1}"),
-  "Date of first publication",
-  "24 January 2017",
-  "Help email",
-  "phs.dementiapds@phs.scot",
-  "Date form completed",
-  format(today(), "%d %B %Y")
-)
-
-```
-
 <Div custom-style = "Publication subtitle">This is an Official Statistics Publication</Div>
 
 Public Health Scotland has authority to produce official statistics on any matter in accordance with [The Official Statistics (Scotland) Order 2008](http://www.legislation.gov.uk/ssi/2008/131/contents/made), [The Official Statistics (Scotland) Amendment Order 2019](http://www.legislation.gov.uk/ssi/2019/416/made) and the [Statistics and Registration Service Act 2007](https://www.legislation.gov.uk/ukpga/2007/18/contents).
@@ -1291,22 +1165,135 @@ As a result of the COVID-19 pandemic, some areas have reported difficulties in u
 
 <br>
 
-```{r metadata-table, echo = FALSE, ft.align = "center"}
-metadata %>%
-  flextable() %>%
-  ft_dementia_style() %>%
-  set_header_labels(indicator = "Metadata Indicator",
-                    description = "Description") %>%
-  align(align = "left", part = "body") %>%
-  valign(valign = "top", part = "all") %>%
-  bold(j = 1, part = "body") %>%
-  bold(j = 2, i = nrow(metadata), bold = FALSE) %>%
-  border_outer(border = fp_border()) %>%
-  border_inner(border = fp_border()) %>%
-  autofit(add_w = 0, add_h = 0.06) %>%
-  width(j = 1, width = 5.5 / 2.54) %>%
-  width(j = 2, width = 12.3 / 2.54)
-```
+**Publication title**
+
+Dementia Post-Diagnostic Support: Local Delivery Plan (LDP) standard - Figures to `r latest_fy`
+
+**Description**
+
+This publication reports on the [LDP standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) that those people newly diagnosed with dementia should receive a minimum of one year's post-diagnostic support.
+
+**Theme**
+
+Health and Social Care
+
+**Topic**
+
+Dementia Post-Diagnostic Support
+
+**Format**
+
+PDF Report with Excel Tables
+
+**Data source(s)**
+
+Public Health Scotland (PHS) Dementia Post-diagnostic support data submission from NHS Boards
+
+**Date that data are acquired**
+
+Data submission as at `r format(end_date, "%d %B %Y")`
+
+**Release date**
+
+`r format(pub_date, "%d %B %Y")`
+
+**Frequency**
+
+Annual
+
+**Timeframe of data and timeliness**
+
+This publication includes those diagnosed with dementia and referred for dementia post-diagnostic support between 1 April `r str_sub(fy_in_pub[1], 1, 4)` to 31 March 20`r str_sub(latest_fy, 6, 7)`.
+
+For diagnoses in `r latest_fy`, it is possible some service users are still receiving their post-diagnostic support and they are reported as ongoing.
+
+**Continuity of data**
+
+Initial data collection for Dementia post-diagnostic support began in April 2013, however due to data completeness and quality issues the definitions and recording processes were revised during 2018/19 and were effective from 1 April 2019 for all records with a dementia diagnosis post 1 April 2016.
+
+Information presented in this publication is not comparable to dementia post-diagnostic support LDP standard information published for time periods prior to 2016/17.  This is due to a combination of the change in definitions, improvements to data quality and refinements to the method used to calculate the standard.
+
+**Revisions statement**
+
+Public Health Scotland (PHS) aims to continually improve the interpretation of the data and therefore analysis methods are regularly reviewed and may be updated in the future.
+
+**Revisions relevant to this publication**
+
+This publication presents finalised figures for `r revised_fy` and provisional figures for `r latest_fy` subject to some service users still receiving post-diagnostic support.
+
+**Concepts and definitions**
+
+The Data Definitions and Recording Guidance effective 01 April 2019 can be found on the [PHS website](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf).
+
+**Relevance and key uses of the statistics**
+
+The data presented in this release supports the Scottish Government’s LDP standard relating to those people newly diagnosed with dementia should receive a minimum of one year’s post-diagnostic support.
+
+**Accuracy**
+
+This is an Official Statistics publication and the UK Statistics Authority’s Code of Practice has been followed throughout.
+
+NHS Boards have the responsibility of gathering and submitting information on the delivery of Dementia post-diagnostic support for all Integration Joint Boards to support the measurement of the LDP standard. It is expected by PHS that quality assurance methods and measures are in place locally and implemented to ensure information is accurate and correct. PHS conduct quality checks upon receipt of data and feedback data queries to NHS Boards. 
+
+As at the `r format(end_date, '%d %B %Y')` data submission, the Scotland level error rate `r glue_collapse(err$text, sep = ', ', last = ' and ')`.
+
+`r a_city_statement`
+
+**Completeness**
+
+Data submissions are received for all NHS Boards and include data for all Integration Joint Boards. 
+
+As a result of the COVID-19 pandemic, some areas have reported difficulties in updating their data systems which are required to provide the dementia PDS dataset, however it is not anticipated that this has a large impact on the data presented in this report.
+
+**Comparability**
+
+Information presented in this publication is not comparable to dementia post-diagnostic support LDP standard information published for time periods prior to 2016/17. This is due to a combination of the change in definitions, improvements to data quality and refinements to the method used to calculate the standard.
+
+Comparability between NHS Boards / Integration Joint Boards should be done so with caution as services can provide different models of care and have varying resource issues.
+
+**Accessibility**
+
+It is the policy of Public Health Scotland (PHS) to make its web sites and products accessible according to [published guidelines](https://beta.isdscotland.org/front-matter/accessibility-statement/). Accessibility of the report and findings are of continuous consideration throughout the report development and all figures have been assessed against the PHS accessibility guidelines.
+
+**Coherence and clarity**
+
+The summary and publication report are accessible via the [PHS website](https://beta.isdscotland.org/find-publications-and-data/conditions-and-diseases/dementia/dementia-post-diagnostic-support/). Tables and charts are presented within an Excel workbook with drop down boxes.
+
+**Value type and unit of measurement**
+
+Numbers, percentages
+
+**Disclosure**
+
+The [PHS protocol on Statistical Disclosure](https://beta.isdscotland.org/media/4191/public-health-scotland-statistical-disclosure-control-protocol.pdf) is followed.
+
+**Official Statistics designation**
+
+Official Statistics
+
+**UK Statistics Authority Assessment**
+
+N/A
+
+**Last published**
+
+`r format(last_pub_date, "%d %B %Y")`
+
+**Next published**
+
+`r paste("March", year(pub_date) + 1)`
+
+**Date of first publication**
+
+24 January 2017
+
+**Help email**
+
+phs.dementiapds@phs.scot
+
+**Date form completed**
+
+`r format(today(), "%d %B %Y")`
 
 \newpage
 
@@ -1332,7 +1319,21 @@ NHS Board Communication leads
 
 **Early Access for Management Information**
 
-These statistics will also have been made available to those who needed access to ‘management information’, i.e. as part of the delivery of health and care.
+These statistics will also have been made available to those who needed access to ‘management information’, i.e. as part of the delivery of health and care:
+
+Scottish Government Dementia Policy Team
+	
+NHS Board Chief Executives 
+	
+Chief Officers of Integrated Joint Boards formed under the [Public Bodies (Joint Working) (Scotland) Act 2014](http://www.legislation.gov.uk/asp/2014/9/contents/enacted)
+	
+Dementia Post-Diagnostic Support (PDS) Leads
+
+NHS Board Dementia Post-Diagnostic Support (PDS) data submitters
+
+Healthcare Improvement Scotland (HIS) Focus on Dementia team
+
+Alzheimer Scotland
 
 \newpage
 
