--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -80,7 +80,7 @@ Row
 
 ### **About the LDP Standard**
 
-The Local Delivery Plan (LDP) standard is that *everyone newly diagnosed with dementia will be offered a minimum of one year’s post-diagnostic support, coordinated by an appropriately trained Link Worker*. Perfromance is reported in two parts:
+The Local Delivery Plan (LDP) standard is that *everyone newly diagnosed with dementia will be offered a minimum of one year’s post-diagnostic support, coordinated by an appropriately trained Link Worker, including the building of a person-centred support plan*. Performance is reported in two parts:
 
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
@@ -89,13 +89,36 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 
 1. The percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support.
 
-2. The percentage of people referred who received a minimum of one year’s support.
+2. The percentage of people referred who received a minimum of one year’s worth of post-diagnostic support coordinated by a Link Worker, including the building of a person-centred support plan.
 
 </div> <br>
 
 For more detail on how the above is calculated, please see the [methodology](#methodology) page.
 
-Further information regarding the Dementia PDS dataset and submission process can be found on the [Dementia PDS pages](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support) of the [PHS website](https://www.isdscotland.org/).
+Further information regarding the Dementia PDS dataset and submission process can be found on the [Dementia PDS pages](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support).
+
+
+Row
+-------------------------------------------------
+
+### **Additional Notes**
+
+*Please note the following:*
+
+**Scotland** – Due to staffing issues the *2022/23* and *2023/24* Scotland figure does not include data from the following areas for the stated quarters : NHS Orkney 2022/23 (*Q3 and Q4*) and 2023/24 (*Q1*). 
+
+**NHS Highland** – Due to staffing issues the Health Board are experiencing a wait to get a diagnosis for some patients and therefore there has been a delay in adding them to the PDS dataset in *Q1 2023/24.*
+
+**NHS Orkney** – Due to ongoing staffing issues NHS Orkney were unable to provide data for 2022/23 (*Q3*, *Q4*) and 2023/24 (*Q1*).
+
+**NHS Shetland** - NHS Shetland do not have a PDS worker in post for *2022/23* *Q2, Q3* and *Q4*, and *2023/24 Q1*. Therefore, NHS Shetland are unable to provide PDS allocation and contact dates for referrals in these quarters.  This explains the large increase seen in their query rate in *2022/23* as the waiting list will exceed 6 months for many. Once a PDS worker has been assigned these dates will be completed.
+
+**NHS Grampian** - Due to staffing issues and system changes, Aberdeen City have reported that they are finding it difficult to collate and report their data timeously and that there will be a lag in the numbers reported. Therefore the numbers presented for recent quarters will be an underestimate of the true number of referrals and likely to be revised in subsequent quarters. Due to changes in service provider the figures for Aberdeen City in 2019/20 and 2020/21 have been affected.
+
+**NHS Tayside** – Due to local IT system issues the figures for *2018/19* and *2019/20* have been affected. 
+
+
+The figures for the number of people estimated to be newly diagnosed with dementia are not currently available for *2021/22*, *2022/23* and *2023/24*.
 
 
 <!-- Scotland -->
